--- a/Mojave/EFI with FakeSMC/EFI/CLOVER/config.plist
+++ b/Mojave/EFI with FakeSMC/EFI/CLOVER/config.plist
@@ -329,6 +329,16 @@
 					<key>Replace</key>
 					<data>WFE2OQA=</data>
 				</dict>
+				<dict>
+					<key>Comment</key>
+					<string>change HDAS to HDEF</string>
+					<key>Disabled</key>
+					<false/>
+					<key>Find</key>
+					<data>SERBUw==</data>
+					<key>Replace</key>
+					<data>SERFRg==</data>
+				</dict>
 			</array>
 		</dict>
 		<key>DisabledAML</key>
@@ -387,7 +397,7 @@
 			<key>Inject</key>
 			<integer>12</integer>
 			<key>ResetHDA</key>
-			<true/>
+			<false/>
 		</dict>
 		<key>FakeID</key>
 		<dict>
@@ -454,10 +464,6 @@
 		<key>UseIntelHDMI</key>
 		<false/>
 	</dict>
-	<key>DisableDrivers</key>
-	<array>
-		<string>VBoxHfs</string>
-	</array>
 	<key>GUI</key>
 	<dict>
 		<key>#ScreenResolution</key>
